Penambahan tombol print dan perapihan UI